GPC/tests/examples/fail/wrongPointers.gpc


int GPRM::Test::wrongPointers(int *a) {
    int b = a * 6;
}
